# agent-memory-cpp

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: AgentMemoryDependencies.cmake  AgentMemoryJson.cmake  AgentMemoryOptions.cmake
docs/eval/: benchmark-report.md  binary-hypothesis-matrix.md  dataset-schema.md  json-library-choice.md
docs/eval/reports/: synthetic-staircase-v1.md  synthetic-v1.md
examples/: CMakeLists.txt  basic_usage.cpp
guides/: advanced-binary-techniques-roadmap.md  affective-memory-roadmap.md  architecture.md  binary-embeddings-roadmap.md  build-and-test.md  chunkers-roadmap.md  cli-roadmap.md  code-intelligence-roadmap.md  codebase-orientation.md  coding-agent-workflow.md  coding-style.md  commit-conventions.md  compaction-roadmap.md  compression-is-intelligence-roadmap.md  critical-defaults.md  dependencies.md  embedding.md  knowledge-base-roadmap.md  knowledge-units-roadmap.md  lexical-search-roadmap.md  mdbx-containers-extension-tz.md  mdbx-stack-boundaries.md  memory-architectures-roadmap.md  memory-routing-roadmap.md  memory-stacks-roadmap.md  optimization-roadmap.md  policies-roadmap.md  project-overview.md  related-projects.md  research-reading-map.md  resource-reindexing.md  retrieval-techniques-roadmap.md  runtime-services-roadmap.md  usage-llm-wiki.md  usage-memory-models.md  vector-db-engineering-roadmap.md
guides/experiments/: 2026-07-20-binary-flat-vs-exact-vector.md  2026-07-21-binary-high-dimensional-synthetic-grid.md  2026-07-21-itq-rotation-binary-baseline.md  2026-07-21-pca-projection-binary-baseline.md  2026-07-21-precomputed-embedding-qrels-gate.md  2026-07-22-aggregate-binary-signatures.md  2026-07-23-binary-lifecycle-gate.md  2026-07-23-binary-lifecycle-overfetch-contract.md  2026-07-23-binary-lifecycle-overfetch-rerank.md  2026-07-23-binary-lifecycle-scale-manual.md  2026-07-23-tencentdb-agent-memory-reference.md  README.md
src/: agent_memory.hpp
src/agent_memory/: AgentMemory.hpp  chat.hpp  core.hpp  domain.hpp  embedding.hpp  eval.hpp  facts.hpp  index.hpp  infrastructure.hpp  ingestion.hpp  lexical.hpp  memory.hpp  retrieval.hpp  storage.hpp
src/agent_memory/chat/: Chat.hpp  Message.cpp  Message.hpp
src/agent_memory/core/: Core.hpp  LibraryInfo.cpp  LibraryInfo.hpp
src/agent_memory/domain/: Document.cpp  Document.hpp  Domain.hpp  Identifiers.cpp  Identifiers.hpp  Metadata.cpp  Metadata.hpp  MetadataFilter.cpp  MetadataFilter.hpp  Resource.cpp  Resource.hpp  SourceKind.cpp  SourceKind.hpp
src/agent_memory/embedding/: Embedding.cpp  Embedding.hpp  EmbeddingApi.hpp  IEmbedder.cpp  IEmbedder.hpp  embedding_types.cpp  embedding_types.hpp  enums.cpp  enums.hpp
tests/: CMakeLists.txt
tests/domain/: domain_primitives_test.cpp  resource_manifest_test.cpp
tests/embedding/: embedding_contracts_test.cpp
tests/eval/: benchmark_report_test.cpp  evaluation_contracts_test.cpp  loader_test.cpp  precomputed_embedding_dataset_loader_test.cpp  retriever_adapter_test.cpp  runner_test.cpp  synthetic_sweep_test.cpp
tests/eval/fixtures/: precomputed-embedding-external-hash.json  precomputed-embedding-medium.json  precomputed-embedding-minilm-l6-v2-large.json  precomputed-embedding-minilm-l6-v2.json  precomputed-embedding-tiny.json  sample_v1.json  tiny_synthetic_v1.json
tests/index/: aggregate_binary_signature_test.cpp  binary_signature_encoder_registry_test.cpp  binary_signature_encoder_test.cpp  binary_signature_test.cpp  exact_vector_index_test.cpp  flat_binary_signature_index_test.cpp  multi_probe_hamming_index_test.cpp  vector_index_contracts_test.cpp  vector_similarity_computer_test.cpp
tests/infrastructure/mdbx/: mdbx_document_storage_test.cpp  mdbx_resource_manifest_storage_test.cpp
tests/ingestion/: resource_indexer_test.cpp
tests/lexical/: exact_lexical_index_test.cpp  keyword_overlap_index_test.cpp  lexical_index_contract_test.cpp  lexical_value_types_test.cpp  scaffolding_test.cpp  standard_tokenizer_test.cpp  token_dictionary_contract_test.cpp  tokenizer_contracts_test.cpp
tests/retrieval/: exact_lexical_retriever_test.cpp  exact_vector_retriever_test.cpp  retrieval_contracts_test.cpp
tests/smoke/: agent_memory_smoke.cpp
tests/storage/: document_storage_contract_test.cpp  feature_flags_test.cpp  resource_manifest_storage_contract_test.cpp
tools/agent-memory-bench/: CMakeLists.txt  aggregate-signature-smoke.example.json  aggregate_signature.cpp  binary-lifecycle-100k.manual.json  binary-lifecycle-10k.manual.json  binary-lifecycle-smoke.example.json  binary_lifecycle.cpp  config.example.json  generate-precomputed-external-hash-fixture.py  generate-precomputed-minilm-fixture.py  generate-precomputed-minilm-large-fixture.py  hamming-hot-path-100k-balanced.example.json  hamming-hot-path-100k.example.json  hamming-hot-path-smoke.example.json  hamming-hot-path.example.json  hamming_hot_path.cpp  main.cpp  minilm_fixture_generator_common.py  precomputed-embedding-binary-rerank-grid-external-hash.example.json  precomputed-embedding-binary-rerank-grid-medium.example.json  precomputed-embedding-binary-rerank-grid-minilm-large.example.json  precomputed-embedding-binary-rerank-grid-minilm.example.json  precomputed-embedding-binary-rerank-grid-smoke.example.json  precomputed_artifact_verify.cpp  precomputed_fixture_contract.py  precomputed_fixture_large_contract.py  requirements-minilm-fixture.txt  synthetic-binary-flat-vs-float.example.json  synthetic-binary-rerank-grid-highdim-1536.example.json  synthetic-binary-rerank-grid-highdim-384.example.json  synthetic-binary-rerank-grid-highdim-768.example.json  synthetic-binary-rerank-grid-itq.example.json  synthetic-binary-rerank-grid-pca.example.json  synthetic-binary-rerank-grid-smoke.example.json  synthetic-binary-rerank-grid.example.json  synthetic-sweep.example.json  validate-aggregate-signature-smoke.cmake  validate-binary-lifecycle-config-compat.cmake  validate-binary-lifecycle-smoke.cmake  validate-binary-rerank-grid-smoke.cmake  (+11 more)
tools/benchmarks/: synthetic_generator.py  synthetic_staircase.py
(+121 files in other folders)
