cmake_minimum_required(VERSION 3.20)

project(agent-memory-cpp
    VERSION 0.1.0
    DESCRIPTION "Embedded C++17 memory and retrieval toolkit for AI agents"
    LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(AGENT_MEMORY_TOP_LEVEL OFF)
if(CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR)
    set(AGENT_MEMORY_TOP_LEVEL ON)
endif()

include(cmake/AgentMemoryOptions.cmake)
include(cmake/AgentMemoryDependencies.cmake)
include(cmake/AgentMemoryJson.cmake)

if(AGENT_MEMORY_BUILD_BENCHMARKS AND NOT AGENT_MEMORY_ENABLE_JSON)
    message(FATAL_ERROR
        "AGENT_MEMORY_BUILD_BENCHMARKS requires AGENT_MEMORY_ENABLE_JSON=ON")
endif()

add_library(agent_memory STATIC
    src/agent_memory/chat/Message.cpp
    src/agent_memory/core/LibraryInfo.cpp
    src/agent_memory/domain/Document.cpp
    src/agent_memory/domain/Identifiers.cpp
    src/agent_memory/domain/Metadata.cpp
    src/agent_memory/domain/MetadataFilter.cpp
    src/agent_memory/domain/Resource.cpp
    src/agent_memory/domain/SourceKind.cpp
    src/agent_memory/embedding/embedding_types.cpp
    src/agent_memory/embedding/enums.cpp
    src/agent_memory/embedding/IEmbedder.cpp
    src/agent_memory/eval/BenchmarkReport.cpp
    src/agent_memory/eval/Evaluation.cpp
    src/agent_memory/eval/IRetrieverAdapter.cpp
    src/agent_memory/eval/RetrievalEvalRunner.cpp
    src/agent_memory/eval/StubRetriever.cpp
    src/agent_memory/facts/Fact.cpp
    src/agent_memory/ingestion/ResourceIndexer.cpp
    src/agent_memory/index/BinarySignature.cpp
    src/agent_memory/index/BinarySignatureEncoderRegistry.cpp
    src/agent_memory/index/BinarySignatureInfo.cpp
    src/agent_memory/index/CoordinateSignBinaryEncoder.cpp
    src/agent_memory/index/ExactVectorIndex.cpp
    src/agent_memory/index/FlatBinarySignatureIndex.cpp
    src/agent_memory/index/IBinarySignatureEncoder.cpp
    src/agent_memory/index/IBinarySignatureIndex.cpp
    src/agent_memory/index/ItqRotationBinaryEncoder.cpp
    src/agent_memory/index/IVectorIndex.cpp
    src/agent_memory/index/LearnedProjectionBinaryEncoder.cpp
    src/agent_memory/index/MultiProbeHammingIndex.cpp
    src/agent_memory/index/PcaProjectionBinaryEncoder.cpp
    src/agent_memory/index/RandomizedHadamardBinaryEncoder.cpp
    src/agent_memory/index/RandomHyperplaneBinaryEncoder.cpp
    src/agent_memory/index/VectorSimilarityComputer.cpp
    src/agent_memory/index/VectorIndex.cpp
    src/agent_memory/lexical/ExactLexicalIndex.cpp
    src/agent_memory/lexical/IChunkEnricher.cpp
    src/agent_memory/lexical/ILexicalIndex.cpp
    src/agent_memory/lexical/IQueryAnalyzer.cpp
    src/agent_memory/lexical/IReranker.cpp
    src/agent_memory/lexical/ITokenDictionary.cpp
    src/agent_memory/lexical/ITokenizer.cpp
    src/agent_memory/lexical/KeywordOverlapIndex.cpp
    src/agent_memory/lexical/Lexical.cpp
    src/agent_memory/lexical/StandardTokenizer.cpp
    src/agent_memory/lexical/TokenDictionary.cpp
    src/agent_memory/lexical/Tokenizer.cpp
    src/agent_memory/memory/MemoryObject.cpp
    src/agent_memory/retrieval/BowEmbedder.cpp
    src/agent_memory/retrieval/BowVectorRetriever.cpp
    src/agent_memory/retrieval/BruteForceTopKIndex.cpp
    src/agent_memory/retrieval/ExactLexicalRetriever.cpp
    src/agent_memory/retrieval/HybridRetrievalEngine.cpp
    src/agent_memory/retrieval/IRetrievalEngine.cpp
    src/agent_memory/retrieval/IRetriever.cpp
    src/agent_memory/retrieval/Retrieval.cpp
    src/agent_memory/storage/IDocumentStorage.cpp
    src/agent_memory/storage/IResourceManifestStorage.cpp
)
add_library(agent_memory::agent_memory ALIAS agent_memory)

target_compile_features(agent_memory PUBLIC cxx_std_17)

target_include_directories(agent_memory
    PUBLIC
        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/src>
        $<INSTALL_INTERFACE:include>
)

target_compile_definitions(agent_memory
    PUBLIC
        AGENT_MEMORY_HAS_MDBX=$<BOOL:${AGENT_MEMORY_ENABLE_MDBX}>
        AGENT_MEMORY_ENABLE_JSON=$<BOOL:${AGENT_MEMORY_ENABLE_JSON}>
)

set_target_properties(agent_memory PROPERTIES
    OUTPUT_NAME agent_memory
)

if(AGENT_MEMORY_ENABLE_WARNINGS)
    if(MSVC)
        target_compile_options(agent_memory PRIVATE /W4 /permissive-)
    else()
        target_compile_options(agent_memory PRIVATE -Wall -Wextra -Wpedantic)
    endif()
endif()

if(AGENT_MEMORY_ENABLE_MDBX)
    target_sources(agent_memory
        PRIVATE
            src/agent_memory/infrastructure/mdbx/MdbxDocumentStorage.cpp
            src/agent_memory/infrastructure/mdbx/MdbxResourceManifestStorage.cpp
    )

    agent_memory_provide_mdbx_containers(AGENT_MEMORY_MDBX_CONTAINERS_TARGET)
    target_link_libraries(agent_memory
        PRIVATE
            ${AGENT_MEMORY_MDBX_CONTAINERS_TARGET}
    )
endif()

agent_memory_provide_json(AGENT_MEMORY_JSON_TARGET)
if(AGENT_MEMORY_ENABLE_JSON)
    target_sources(agent_memory
        PRIVATE
            src/agent_memory/eval/DatasetLoader.cpp
            src/agent_memory/eval/PrecomputedEmbeddingDataset.cpp
    )
    target_link_libraries(agent_memory
        PRIVATE
            ${AGENT_MEMORY_JSON_TARGET}
    )
endif()

if(AGENT_MEMORY_BUILD_EXAMPLES)
    add_subdirectory(examples)
endif()

if(AGENT_MEMORY_BUILD_BENCHMARKS)
    add_subdirectory(tools/agent-memory-bench)
endif()

if(AGENT_MEMORY_BUILD_TESTS)
    enable_testing()
    if(AGENT_MEMORY_BUILD_BENCHMARKS)
        add_test(
            NAME agent_memory_benchmark_cli_synthetic_sweep
            COMMAND
                $<TARGET_FILE:agent-memory-bench>
                ${CMAKE_CURRENT_SOURCE_DIR}/tools/agent-memory-bench/synthetic-sweep.example.json
                ${CMAKE_CURRENT_BINARY_DIR}/synthetic-sweep-ctest.json
            WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
        )
        add_test(
            NAME agent_memory_benchmark_cli_synthetic_binary_flat_vs_float
            COMMAND
                $<TARGET_FILE:agent-memory-bench>
                ${CMAKE_CURRENT_SOURCE_DIR}/tools/agent-memory-bench/synthetic-binary-flat-vs-float.example.json
                ${CMAKE_CURRENT_BINARY_DIR}/synthetic-binary-flat-vs-float-ctest.json
            WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
        )
        add_test(
            NAME agent_memory_benchmark_cli_synthetic_binary_rerank_grid
            COMMAND
                ${CMAKE_COMMAND}
                -DAGENT_MEMORY_BENCH_EXE=$<TARGET_FILE:agent-memory-bench>
                -DAGENT_MEMORY_BENCH_CONFIG=${CMAKE_CURRENT_SOURCE_DIR}/tools/agent-memory-bench/synthetic-binary-rerank-grid-smoke.example.json
                -DAGENT_MEMORY_BENCH_OUTPUT=${CMAKE_CURRENT_BINARY_DIR}/synthetic-binary-rerank-grid-ctest.json
                -DAGENT_MEMORY_BENCH_WORKDIR=${CMAKE_CURRENT_SOURCE_DIR}
                -P ${CMAKE_CURRENT_SOURCE_DIR}/tools/agent-memory-bench/validate-binary-rerank-grid-smoke.cmake
            WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
        )
        add_test(
            NAME agent_memory_benchmark_cli_precomputed_embedding_binary_rerank_grid
            COMMAND
                ${CMAKE_COMMAND}
                -DAGENT_MEMORY_BENCH_EXE=$<TARGET_FILE:agent-memory-bench>
                -DAGENT_MEMORY_BENCH_CONFIG=${CMAKE_CURRENT_SOURCE_DIR}/tools/agent-memory-bench/precomputed-embedding-binary-rerank-grid-smoke.example.json
                -DAGENT_MEMORY_BENCH_OUTPUT=${CMAKE_CURRENT_BINARY_DIR}/precomputed-embedding-binary-rerank-grid-ctest.json
                -DAGENT_MEMORY_BENCH_WORKDIR=${CMAKE_CURRENT_SOURCE_DIR}
                -P ${CMAKE_CURRENT_SOURCE_DIR}/tools/agent-memory-bench/validate-precomputed-embedding-binary-rerank-smoke.cmake
            WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
        )
        add_test(
            NAME agent_memory_precomputed_embedding_artifact_verify_tiny
            COMMAND
                $<TARGET_FILE:agent-memory-precomputed-artifact-verify>
                ${CMAKE_CURRENT_SOURCE_DIR}/tests/eval/fixtures/precomputed-embedding-tiny.json
            WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
        )
        add_test(
            NAME agent_memory_precomputed_embedding_artifact_verify_negative
            COMMAND
                ${CMAKE_COMMAND}
                -DAGENT_MEMORY_PRECOMPUTED_ARTIFACT_VERIFY_EXE=$<TARGET_FILE:agent-memory-precomputed-artifact-verify>
                -DAGENT_MEMORY_PRECOMPUTED_EMBEDDING_DATASET=${CMAKE_CURRENT_SOURCE_DIR}/tests/eval/fixtures/precomputed-embedding-tiny.json
                -DAGENT_MEMORY_PRECOMPUTED_EMBEDDING_NEGATIVE_WORKDIR=${CMAKE_CURRENT_BINARY_DIR}/precomputed-embedding-artifact-negative
                -P ${CMAKE_CURRENT_SOURCE_DIR}/tools/agent-memory-bench/validate-precomputed-embedding-artifact-negative.cmake
            WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
        )
        add_test(
            NAME agent_memory_precomputed_embedding_artifact_verify_canonicalization
            COMMAND
                ${CMAKE_COMMAND}
                -DAGENT_MEMORY_PRECOMPUTED_ARTIFACT_VERIFY_EXE=$<TARGET_FILE:agent-memory-precomputed-artifact-verify>
                -DAGENT_MEMORY_PRECOMPUTED_EMBEDDING_DATASET=${CMAKE_CURRENT_SOURCE_DIR}/tests/eval/fixtures/precomputed-embedding-tiny.json
                -DAGENT_MEMORY_PRECOMPUTED_EMBEDDING_CANONICAL_WORKDIR=${CMAKE_CURRENT_BINARY_DIR}/precomputed-embedding-artifact-canonical
                -P ${CMAKE_CURRENT_SOURCE_DIR}/tools/agent-memory-bench/validate-precomputed-embedding-artifact-canonicalization.cmake
            WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
        )
        add_test(
            NAME agent_memory_benchmark_cli_precomputed_embedding_binary_rerank_grid_medium
            COMMAND
                ${CMAKE_COMMAND}
                -DAGENT_MEMORY_BENCH_EXE=$<TARGET_FILE:agent-memory-bench>
                -DAGENT_MEMORY_BENCH_CONFIG=${CMAKE_CURRENT_SOURCE_DIR}/tools/agent-memory-bench/precomputed-embedding-binary-rerank-grid-medium.example.json
                -DAGENT_MEMORY_BENCH_OUTPUT=${CMAKE_CURRENT_BINARY_DIR}/precomputed-embedding-binary-rerank-grid-medium-ctest.json
                -DAGENT_MEMORY_BENCH_WORKDIR=${CMAKE_CURRENT_SOURCE_DIR}
                -P ${CMAKE_CURRENT_SOURCE_DIR}/tools/agent-memory-bench/validate-precomputed-embedding-binary-rerank-medium.cmake
            WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
        )
        add_test(
            NAME agent_memory_precomputed_embedding_artifact_verify_medium
            COMMAND
                $<TARGET_FILE:agent-memory-precomputed-artifact-verify>
                ${CMAKE_CURRENT_SOURCE_DIR}/tests/eval/fixtures/precomputed-embedding-medium.json
            WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
        )
        add_test(
            NAME agent_memory_benchmark_cli_precomputed_embedding_binary_rerank_grid_external_hash
            COMMAND
                ${CMAKE_COMMAND}
                -DAGENT_MEMORY_BENCH_EXE=$<TARGET_FILE:agent-memory-bench>
                -DAGENT_MEMORY_BENCH_CONFIG=${CMAKE_CURRENT_SOURCE_DIR}/tools/agent-memory-bench/precomputed-embedding-binary-rerank-grid-external-hash.example.json
                -DAGENT_MEMORY_BENCH_OUTPUT=${CMAKE_CURRENT_BINARY_DIR}/precomputed-embedding-binary-rerank-grid-external-hash-ctest.json
                -DAGENT_MEMORY_BENCH_WORKDIR=${CMAKE_CURRENT_SOURCE_DIR}
                -P ${CMAKE_CURRENT_SOURCE_DIR}/tools/agent-memory-bench/validate-precomputed-embedding-binary-rerank-external-hash.cmake
            WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
        )
        add_test(
            NAME agent_memory_precomputed_embedding_artifact_verify_external_hash
            COMMAND
                $<TARGET_FILE:agent-memory-precomputed-artifact-verify>
                ${CMAKE_CURRENT_SOURCE_DIR}/tests/eval/fixtures/precomputed-embedding-external-hash.json
            WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
        )
        add_test(
            NAME agent_memory_benchmark_cli_hamming_hot_path
            COMMAND
                $<TARGET_FILE:agent-memory-hamming-hot-path-bench>
                ${CMAKE_CURRENT_SOURCE_DIR}/tools/agent-memory-bench/hamming-hot-path-smoke.example.json
                ${CMAKE_CURRENT_BINARY_DIR}/hamming-hot-path-ctest.json
            WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
        )
    endif()
    add_subdirectory(tests)
endif()
